# OOD

./: .gitignore  README.md
lw-1/: CMakeLists.txt
lw-1/1/: main.cpp  mermaid.txt
lw-1/1/google_test/: test.cpp
lw-1/1/models/Dance/: CMinuetDance.cpp  CNoDance.cpp  CWaltzDance.cpp  IDanceBehavior.h
lw-1/1/models/Ducks/: CDecoyDuck.cpp  CDecoyDuck.h  CMallardDuck.cpp  CMallardDuck.h  CRedHeadDuck.cpp  CRedHeadDuck.h  CRubberDuck.cpp  CRubberDuck.h
lw-1/1/models/Ducks/Duck/: CDuck.cpp  CDuck.h
lw-1/1/models/Fly/: CFlyNoWay.cpp  CFlyWithWings.cpp  IFlyBehavior.h
lw-1/1/models/Quack/: CMuteQuack.cpp  CQuack.cpp  CSqueak.cpp  IQuackBehavior.h
lw-1/3/: CDucks.cpp  CDucks.h  main.cpp
lw-1/3/models/: Dance.cpp  Fly.cpp  Quack.cpp
lw-1/3/models/Duck/: CDuck.h
lw-1/3/models/Ducks/: CDecoyDuck.h  CMallardDuck.h  CRedHeadDuck.h  CRubberDuck.h
lw-1/3/models/Ducks/Duck/: CDuck.h
lw-1/4/: CShapeService.cpp  CShapeService.h  ShapeCommandProcessor.cpp  google_test.rar  main.cpp  mermaid.txt  test1.txt  test2.txt
lw-1/4/google_test/: tempResult1.txt  test.cpp
lw-1/4/google_test/mock/: CShapeServiceMock.cpp  CShapeServiceMock.h
lw-1/4/google_test/testFiles/: test1.txt  test2.txt  test3.txt  testA1.txt  testA2.txt  testA3.txt  testP1.txt  testP2.txt  testP3.txt  testR.txt
lw-1/4/models/: CCanvasSFML.h  CColor.cpp  CColor.h  CPoint.h
lw-1/4/models/Canvas/: CCanvas.h  ICanvas.h
lw-1/4/models/Interface/: ICanvas.h  ICanvasDrawable.h  IShape.h  ISolidShape.h
lw-1/4/models/Picture/: CPicture.cpp  CPicture.h
lw-1/4/models/Shapes/: CCircle.h  CLineSegment.h  CRectangle.h  CShape.cpp  CShape.h  CTriangle.h
lw-1/4/models/Shapes/ShapesStrategy/: IShapeType.h
lw-1/4/models/Shapes/ShapesStrategy/Circle/: CCircleShapeType.cpp  CCircleShapeType.h
lw-1/4/models/Shapes/ShapesStrategy/Line/: CLineShapeType.cpp  CLineShapeType.h
lw-1/4/models/Shapes/ShapesStrategy/Rectangle/: CRectangleShapeType.cpp  CRectangleShapeType.h
lw-1/4/models/Shapes/ShapesStrategy/Text/: CTextShapeType.cpp  CTextShapeType.h
lw-1/4/models/Shapes/ShapesStrategy/Triangle/: CTriangleShapeType.cpp  CTriangleShapeType.h
lw-2/: CMakeLists.txt
lw-2/1_2_3/: Observer.h  WeatherData.h  main.cpp
lw-2/1_2_3/google_test/: test.cpp
lw-2/4_5_6/: Observer.h  WeatherData.h  main.cpp
lw-2/4_5_6/google_test/: test.cpp
lw-2/7/: Observer.h  WeatherData.h  main.cpp
lw-3/: CMakeLists.txt
lw-3/1_2/: Beverages.h  Condiments.h  IBeverage.h  main.cpp  mermaid.txt
lw-3/3/: CCompression.h  CEncryption.h  CStreams.h  IStreams.h  function.h  main.cpp  mermaid.txt  СEncryption.h
lw-4/: .clang-format  CMakeLists.txt
lw-4/1/: imageInstraction.txt  main.cpp
lw-4/1/google_test/: clientTest.cpp  designerTest.cpp  main.cpp  mocks.h  painterTest.cpp  pictureTest.cpp  shapeFactoryTest.cpp  shapeTest.cpp
lw-4/1/models/: CClient.h  CColor.h  CPainter.h  CPoint.h  CShapeFactory.cpp  CShapeFactory.h
lw-4/1/models/Canvas/: CCanvas.h  ICanvas.h
lw-4/1/models/Designer/: CDesigner.cpp  CDesigner.h
lw-4/1/models/Picture/: CPicture.cpp  CPicture.h
lw-4/1/models/Shapes/: CShape.cpp  CShape.h
lw-4/1/models/Shapes/Ellipse/: CEllipse.cpp  CEllipse.h
lw-4/1/models/Shapes/Polygon/: CPolygon.cpp  CPolygon.h
lw-4/1/models/Shapes/Rectangle/: CRectangle.cpp  CRectangle.h
lw-4/1/models/Shapes/Triangle/: CTriangle.cpp  CTriangle.h
lw-5/: CMakeLists.txt  result
lw-5/1/: CommandHandler.h  main.cpp
lw-5/1/Pattern/: mermaid.md
lw-5/1/models/Commands/: ICommand.h
lw-5/1/models/Commands/CCommand/: CCommand.cpp  CCommand.h
lw-5/1/models/Commands/DeleteItemCommand/: DeleteItemCommand.cpp  DeleteItemCommand.h
lw-5/1/models/Commands/InsertImageCommand/: InsertImageCommand.cpp  InsertImageCommand.h
lw-5/1/models/Commands/InsertParagraphCommand/: InsertParagraphCommand.cpp  InsertParagraphCommand.h
lw-5/1/models/Commands/ReplaceTextCommand/: ReplaceTextCommand.cpp  ReplaceTextCommand.h
lw-5/1/models/Commands/ResizeImageCommand/: ResizeImageCommand.cpp  ResizeImageCommand.h
lw-5/1/models/Commands/SaveCommand/: SaveCommand.cpp  SaveCommand.h
lw-5/1/models/Commands/SetTitleCommand/: SetTitleCommand.cpp  SetTitleCommand.h
lw-5/1/models/Document/: Document.cpp  Document.h  IDocument.h
lw-5/1/models/Document/Elements/: IImage.h  IParagraph.h  Image.cpp  Image.h  Paragraph.cpp  Paragraph.h
lw-5/1/models/Document/History/: History.cpp  History.h
lw-5/1/models/Document/Items/: ConstDocumentItem.cpp  ConstDocumentItem.h  DocumentItem.cpp  DocumentItem.h
lw-5/1/models/Menu/: Menu.cpp  Menu.h
lw-5/1/tests/: tests.cpp
lw-6/: CMakeLists.txt
lw-6/1/: ModernGraphicsAdapter.h  main.cpp  mermaid.md
lw-6/1/Libs/: modern_graphics_lib.h
lw-6/1/tests/: test.cpp
lw-6/2/: ModernGraphicsClassAdapter.h  main.cpp
lw-6/2/Libs/: graphics_lib.h  modern_graphics_lib.h  shape_drawing_lib.h
lw-6/2/tests/: test.cpp
lw-6/3/: ModernGraphicsAdapter.h  ModernGraphicsClassAdapter.h  main.cpp  mermaid.md
lw-6/3/Libs/: graphics_lib.h  modern_graphics_lib.h  shape_drawing_lib.h
lw-6/3/tests/: test.cpp
lw-7/: CMakeLists.txt
lw-7/1/Pattern/: mermaid.md
lw-7/1/models/: Client.h  CoreTypes.h  IDrawable.h  main.cpp
lw-7/1/models/Canvas/: ICanvas.h  SVGCanvas.h
lw-7/1/models/Shape/: GroupShape.h  IGroupShape.h  IShape.h  IShapes.h
lw-7/1/models/Shape/Factory/: IShapeFactory.h  ShapeFactory.h
lw-7/1/models/Shape/SimpleShapes/: Ellipse.h  Rectangle.h  Shape.h  Triangle.h
lw-7/1/models/Shape/Style/: GroupStyle.h  IStyle.h  Style.h
lw-7/1/models/Shape/Styles/: IStyle.h  StyleEnumerator.h
lw-7/1/models/Shape/Styles/FillStyle/: GroupFillStyle.h  IFillStyle.h  SimpleFillStyle.h
lw-7/1/models/Shape/Styles/LineStyle/: GroupLineStyle.h  ILineStyle.h  SimpleLineStyle.h
lw-7/1/models/Slide/: ISlide.h  Slide.h  SlideService.h
lw-7/1/test/: test.cpp
